feat: Phase 1 — embedded MVP (plan 02) (#1)
* feat: add embedded MVP surface over the core api (plan 02)

* fix: resolve phase 1 exit review findings (ownership, locking, coverage)

* fix: stage the cdylib before the review gate's test run

* feat: phase 2 subscriptions, callbacks, async adapters, hardening (plan 03)

* fix: stage the platform-dependent cdylib name in just build

* fix: keep engine checkpoint dirs out of junit temp cleanup

* ci: cross-compile darwin-amd64 after intel runner retirement

* docs: amend plan 04 for intel macos runner retirement